# pracker

./: .gitignore  Cargo.toml  LICENSE  README.md  env.sample
migrations/2022-09-03-091949_create_posts/: up.sql
src/: main.rs  schema.rs  wp_crawler.rs
src/db/: database.rs  models.rs
