[package]
edition = "2021"
name = "pracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = {version = "3.2.18", features = ["derive"]}
clap-verbosity-flag = "1.0.1"
nanohtml2text = "0.1.3"
reqwest = {version = "0.11.11", features = ["json"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tokio = {version = "1.20.1", features = ["rt-multi-thread", "macros"]}
