[package]
edition = "2021"
name = "pracker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = {version = "0.4.22", features = ["serde"]}
clap = {version = "4.0.11", features = ["derive"]}
clap-verbosity-flag = "2.0.0"
diesel = {version = "2.0.1", features = ["postgres", "extras", "chrono"]}
dotenv = "0.15.0"
nanohtml2text = "0.1.4"
reqwest = {version = "0.11.12", features = ["json"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
tokio = {version = "1.21.2", features = ["rt-multi-thread", "macros"]}
